# job-data

./: Cargo.toml  README.md
src/: add_window.rs  gui.rs  help_window.rs  info_window.rs  main.rs  records.rs  searchbar.rs  status_edit_window.rs  status_window.rs  statusbar.rs  summarybar.rs  table_window.rs  types.rs
