[package]
name = "job-data"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
csv = "1.3.0"
directories = "5.0.1"
inquire = "0.7.5"
open = "5.3.0"
ratatui = "0.28.1"
serde = { version = "1.0.209", features = ["derive"] }
time = { version = "0.3.36", features = ["serde", "serde-well-known", "formatting", "local-offset"] }
yansi = "1.0.1"
