[package]
name = "job-data"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.17", features = ["derive"] }
csv = "1.3.0"
directories = "5.0.1"
inquire = "0.7.5"
open = "5.3.0"
ratatui = "0.28.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_path_to_error = "0.1.16"
serde_with = "3.9.0"
time = { version = "0.3.36", features = [
    "serde",
    "serde-well-known",
    "formatting",
    "local-offset",
    "macros",
] }
yansi = "1.0.1"
